# aiagent-autopilot

./: .gitignore  AGENTS.md  BUILD.md  DEPLOYMENT.md  Makefile  README.md  agent.spec  classifier.py  config.py  embedding_classifier.py  entry.py  main.py  notifier.py  organizer.py  requirements.txt  rules_engine.py  settings.py  setup.sh  undo.py
brain/: README.md  main.py  requirements.txt
gui/: index.html  script.js  style.css
scripts/: build-agent.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/resources/: autopilot-agent
src-tauri/src/: main.rs
