[package]
name = "autopilot-gui"
version = "0.1.0"
description = "AI Agent Autopilot Menu Bar GUI"
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process", "time"] }
rusqlite = { version = "0.32", features = ["bundled"] }
dirs = "6"
png = "0.17"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

